<resources>
    <string name="app_name">Digital Laundry</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="motto">Your laundry and dry cleaning</string>
    <string name="motto_line2">never felt this easy.</string>
    <string name="pickup">Schedule Pickup</string>
    <string name="hand_clothes">Hand clothes to driver</string>
    <string name="relax">Relax and enjoy!</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_laundry_maps">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="google_maps_key">AIzaSyCbQmlvi77w4Y9Ug5CoiusuiH6iWS2x2Kw</string>
    <string name="title_activity_users_map">Map</string>
    <string name="title_activity_home">Home</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_user_maps">Map</string>


</resources>
